# robrex_mapping

./: README.md
img_tools/: CMakeLists.txt  package.xml
img_tools/launch/: sequence_publisher.launch
img_tools/scripts/: sequence_publisher.py  trajectory_capture.py
kinect_calib/: CMakeLists.txt  package.xml
kinect_calib/doc/: instrukcja.txt
kinect_calib/launch/: depthreg.launch  openni.launch
kinect_calib/launch/include/: depth_proc.launch  device.launch  image_proc.launch
kinect_calib/sample_calib/: depth.yml  rgb.yml  trans.yml
kinect_calib/scripts/: capture_images.py  prepare_calib_config.py  publish_images.py  publish_transform.py  split_files.py
surfel_mapper/: CMakeLists.txt  Doxyfile  package.xml
surfel_mapper/include/: logger_impl.hpp  point_custom_surfel.hpp  surfel_mapper.hpp
surfel_mapper/launch/: keyframe_mapper.launch  surfel_mapper.launch  visual_odometry.launch
surfel_mapper/libmapper/: CMakeLists.txt  Doxyfile
surfel_mapper/libmapper/include/: logger.hpp  logger_impl.hpp  point_custom_surfel.hpp  surfel_mapper.hpp
surfel_mapper/libmapper/src/: logger.cpp  surfel_mapper.cpp  surfel_mapper_test.cpp
surfel_mapper/libmapper/test/: CMakeLists.txt  surfel_mapper_test.cpp
surfel_mapper/src/: logger.cpp  surfel_mapper.cpp  surfel_mapper_node.cpp
surfel_mapper/srv/: PublishMap.srv
